--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,21 @@
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
-    <h1>Hello world</h1>
-
+    <div class="container">
+      <div class="row">
+        <div class="col-12">Colonne 1</div>
+        <div class="col-6">Colonne 2</div>
+        <div class="col-6">Colonne 3</div>
+        <div class="col-4">Colonne 4</div>
+        <div class="col-4">Colonne 5</div>
+        <div class="col-4">Colonne 6</div>
+        <div class="col-5">Colonne 7</div>
+        <div class="col-7">Colonne 8</div>
+        <div class="col-3">Colonne 9</div>
+        <div class="col-6">Colonne 10</div>
+        <div class="col-3">Colonne 11</div>
+      </div>
+    </div>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
